bk_ida/gccida/c1/maybe_eliminate_biv_1
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/maybe_eliminate_biv_1/src/loop.c:9077:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v13; // ebp 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/maybe_eliminate_biv_1/src/loop.c:9084:1: error: use of undeclared identifier 'induction_1'
induction_1 *giv; // rcx 
^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/maybe_eliminate_biv_1/src/loop.c:9084:14: error: use of undeclared identifier 'giv'; did you mean 'div'?
induction_1 *giv; // rcx 
             ^~~
             div
/usr/include/stdlib.h:849:14: note: 'div' declared here
extern div_t div (int __numer, int __denom)
             ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/maybe_eliminate_biv_1/src/loop.c:9087:1: error: use of undeclared identifier 'induction_1'
induction_1 *v24; // r14 
^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/maybe_eliminate_biv_1/src/loop.c:9087:14: error: use of undeclared identifier 'v24'
induction_1 *v24; // r14 
             ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/maybe_eliminate_biv_1/src/loop.c:9090:6: error: use of undeclared identifier 'v27'
rtx *v27; // rsi 
     ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/maybe_eliminate_biv_1/src/loop.c:9093:4: error: expected ';' after expression
rtx mult_val; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/maybe_eliminate_biv_1/src/loop.c:9093:5: error: use of undeclared identifier 'mult_val'
rtx mult_val; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/maybe_eliminate_biv_1/src/loop.c:9095:4: error: expected ';' after expression
rtx v32; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/maybe_eliminate_biv_1/src/loop.c:9095:5: error: use of undeclared identifier 'v32'
rtx v32; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/maybe_eliminate_biv_1/src/loop.c:9096:4: error: expected ';' after expression
rtx add_val; // rcx 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/maybe_eliminate_biv_1/src/loop.c:9096:5: error: use of undeclared identifier 'add_val'
rtx add_val; // rcx 
    ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/maybe_eliminate_biv_1/src/loop.c:9097:1: error: use of undeclared identifier 'induction_1'
induction_1 **p_next_iv; // rbx 
^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/maybe_eliminate_biv_1/src/loop.c:9097:15: error: use of undeclared identifier 'p_next_iv'
induction_1 **p_next_iv; // rbx 
              ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/maybe_eliminate_biv_1/src/loop.c:9098:1: error: use of undeclared identifier 'induction_1'
induction_1 *v35; // rax 
^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/maybe_eliminate_biv_1/src/loop.c:9098:14: error: use of undeclared identifier 'v35'
induction_1 *v35; // rax 
             ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/maybe_eliminate_biv_1/src/loop.c:9099:1: error: use of undeclared identifier 'induction_1'
induction_1 **p_giv; // rbx 
^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/maybe_eliminate_biv_1/src/loop.c:9099:15: error: use of undeclared identifier 'p_giv'
induction_1 **p_giv; // rbx 
              ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/maybe_eliminate_biv_1/src/loop.c:9100:1: error: use of undeclared identifier 'induction_1'
induction_1 *v37; // rax 
^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/maybe_eliminate_biv_1/src/obj/loop.o] Error 1
